# tvm-ffi

./: CMakeLists.txt  conv0.md  conv1.md  conv2.md  design.md  main.py  printer_design.md  pyproject.toml  v3.md  v4.md
addons/tilus/: README.md  pyproject.toml
addons/weave/: README.md  SCHEMA.md  pyproject.toml
addons/weave/python/weave/: __init__.py  _weave_lang.py
addons/weave/python/weave/ir/: __init__.py  _utils.py  config.py  dtypes.py  expr.py  functors.py  handles.py  kernel.py  swizzle.py  task.py  types.py
addons/weave/python/weave/ir/ops/: __init__.py  atomic.py  barriers.py  clc.py  elementwise.py  memory.py  mma.py
addons/weave/tests/: _roundtrip.py  conftest.py  test_weave_exports.py  test_weave_functors.py  test_weave_kernel.py  test_weave_node_roundtrip.py  test_weave_op_roundtrip.py  test_weave_parser.py  test_weave_text_roundtrip.py  test_weave_validation.py
design_doc/: v0.md  v1.md  v2.md  v3.md
docs/: conf.py
python/tvm_ffi/: __init__.py  _dtype.py  _parse_decorators.py  _pyast_parser.py  _pyast_source.py  _pyast_translator.py  _pyast_visitor.py  _std_api.py  _std_lang.py  core.pyi  dialect_autogen.py  parse_dispatch.py  pyast.py  pyast_parser.py  pyast_trait_parse.py  registry.py  std.py  structural.py  tirx.py
src/ffi/: object.cc
tests/cpp/: test_reflection.cc
tests/python/: test_dataclass_c_class.py  test_dataclass_common.py  test_dataclass_copy.py  test_dataclass_frozen.py  test_dataclass_py_class.py  test_dialect_autogen.py  test_dialect_stub.py  test_foreign_dialect_printer.py  test_function.py  test_ir_traits.py  test_mini_mlir.py  test_mini_relax.py  test_mini_tir.py  test_pyast.py  test_pyast_from_py.py  test_pyast_parser.py  test_pyast_printer.py  test_pyast_source.py  test_std.py  test_std_parser.py  test_std_traits.py  test_structural_visit.py  test_sym_analyzer_canonical_simplify.py  test_sym_analyzer_const_int_bound.py  test_sym_analyzer_interval_set.py  test_sym_analyzer_modular_set.py  test_sym_analyzer_rewrite_simplify.py  test_sym_expr.py  (+3 more)
(+120 files in other folders)
